# Graber

./: .gitignore  Bangladesh.md  CMakeLists.txt  English.md  GK_int.md  README.md  main.cpp  resources.qrc
.github/workflows/: build.yml
.obsidian/: workspace.json
.qt/: QtDeploySupport.cmake
src/core/: CMakeLists.txt  application_state.cpp  application_state.h  constants.h  section_definitions.cpp  section_definitions.h
src/features/clipboard/: CMakeLists.txt  clipboard_monitor.cpp  clipboard_monitor.h
src/features/document_normalizer/: CMakeLists.txt  normalizer.cpp  normalizer.h
src/features/image_capture/: CMakeLists.txt  image_capturer.cpp  image_capturer.h
src/features/keyboard_shortcuts/: CMakeLists.txt  shortcut_manager.cpp  shortcut_manager.h
src/features/section_manager/: CMakeLists.txt  section_manager.cpp  section_manager.h
src/features/settings/: CMakeLists.txt  settings_manager.cpp  settings_manager.h
src/features/subject_management/: CMakeLists.txt  subject_manager.cpp  subject_manager.h
src/features/toc_generator/: CMakeLists.txt  toc_generator.cpp  toc_generator.h
src/utilities/: CMakeLists.txt  file_handler.cpp  file_handler.h  logger.cpp  logger.h  slug_generator.cpp  slug_generator.h
